fix(plugins/plugin-client-common): LeftNavSidecar does not always reflect updated content Fixes #4727
also fixes overflowing breadcrumbs
Fixes #4732

--- a/plugins/plugin-client-common/web/css/static/sidecar.css
+++ b/plugins/plugin-client-common/web/css/static/sidecar.css
@@ -28,10 +28,6 @@
 
   .sidecar-bottom-stripe {
     transition: none;
-    &:not(.kui--sidecar--titlebar-has-breadcrumbs) {
-      border: none;
-      background: transparent;
-    }
 
     .sidecar-bottom-stripe-right-bits {
       /* filler in the window stripe to fill with the content column */
@@ -41,7 +37,6 @@
 
     .kui--sidecar--titlebar-navigation {
       /* filler in the window stripe to fill with the sidenav column */
-      width: $nav-width;
       background-color: var(--color-sidecar-header);
       margin: 0;
       border: none;
